# udacity_data_project_1

./: .gitignore  .pre-commit-config.yaml  README.md  create_tables.py  etl.ipynb  etl.py  pyproject.toml  sql_queries.py  test.ipynb
