[tool.poetry]
name = "project_1"
version = "0.1.0"
description = ""
authors = ["CiprianMo <mocanu.ciprian06@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.3"
jupyter = "^1.0.0"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
